--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,8 +23,8 @@
   font-display: fallback;
   src: url(/assets/fonts/PlusJakartaSans-latin.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-  U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-  U+FEFF, U+FFFD;
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 @font-face {
@@ -34,7 +34,7 @@
   font-display: fallback;
   src: url(/assets/fonts/PlusJakartaSans-italic.woff2) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-  U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 @font-face {
@@ -44,8 +44,8 @@
   font-display: swap;
   src: url(/assets/fonts/FiraCode.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-  U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-  U+FEFF, U+FFFD;
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 @tailwind base;
@@ -186,12 +186,12 @@ body {
   --ifm-navbar-padding-horizontal: 0.75rem;
 
   --ifm-font-family-base: 'Inter', system-ui, -apple-system, Segoe UI, Roboto,
-  Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI',
-  Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-  'Segoe UI Symbol';
+    Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI',
+    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol';
 
   --ifm-font-family-monospace: 'Fira Code', SFMono-Regular, Menlo, Monaco,
-  Consolas, 'Liberation Mono', 'Courier New', monospace;
+    Consolas, 'Liberation Mono', 'Courier New', monospace;
 
   /* Theme colors */
   --ifm-color-primary: #2160fd;
@@ -440,20 +440,20 @@ aside.theme-doc-sidebar-container {
 }
 
 html[data-theme='dark']
-.theme-doc-sidebar-container
-button[title='Collapse sidebar'] {
+  .theme-doc-sidebar-container
+  button[title='Collapse sidebar'] {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0Z' fill='%23ffffff'/%3E%3C/svg%3E");
 }
 
 html[data-theme='dark']
-.theme-doc-sidebar-container
-div[title='Expand sidebar'] {
+  .theme-doc-sidebar-container
+  div[title='Expand sidebar'] {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.293 4.293a1 1 0 0 0 0 1.414L14.586 12l-6.293 6.293a1 1 0 1 0 1.414 1.414l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.414 0Z' fill='%23ffffff'/%3E%3C/svg%3E");
 }
 
 .theme-doc-sidebar-container
-:is(div[title='Expand sidebar'], button[title='Collapse sidebar'])
-svg {
+  :is(div[title='Expand sidebar'], button[title='Collapse sidebar'])
+  svg {
   display: none;
 }
 
@@ -1000,7 +1000,7 @@ details p {
 }
 
 .details_node_modules-\@docusaurus-theme-common-lib-components-Details-styles-module
-> summary::before {
+  > summary::before {
   border-color: transparent transparent transparent var(--docs-color-text-100) !important;
 }
 @media only screen and (min-width: 768px) {
@@ -1185,7 +1185,7 @@ html[data-theme='dark'] .video_sidebar_header > div > a::before {
   content: url('data:image/svg+xml,<svg fill="currentColor" class="sidebar-icon-header ___12fm75w f1w7gpdv fez10in fg4l7m0" aria-hidden="true" width="1em" height="1em" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M4.5 4A2.5 2.5 0 0 0 2 6.5v7A2.5 2.5 0 0 0 4.5 16h7a2.5 2.5 0 0 0 2.5-2.5v-1l2.4 1.8a1 1 0 0 0 1.6-.8v-7a1 1 0 0 0-1.6-.8L14 7.5v-1A2.5 2.5 0 0 0 11.5 4h-7ZM14 8.75l3-2.25v7l-3-2.25v-2.5ZM13 6.5v7c0 .83-.67 1.5-1.5 1.5h-7A1.5 1.5 0 0 1 3 13.5v-7C3 5.67 3.67 5 4.5 5h7c.83 0 1.5.67 1.5 1.5Z" fill="white"></path></svg>');
 }
 .guides-top-header {
-  @apply mr-2 rounded-md border-secondary-700;
+  @apply ml-6 mr-2 rounded-md border-secondary-700;
   border-width: 1px;
 }
 
