--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -784,9 +784,15 @@ body[data-sdk-menu='mobile'] [data-dropdown-sdks='mobile'] {
   display: flex;
 }
 
+body[data-sdk-menu='game'] [data-dropdown-sdks='game'] {
+  display: flex;
+}
+
+
 body[data-sdk-menu='plugin'] [data-dropdown-sdks='plugin'] {
   display: flex;
 }
+
 
 [data-dropdown-sdks-menu] {
   @apply border-0 border-l-4 border-solid border-transparent pl-4;
@@ -794,6 +800,7 @@ body[data-sdk-menu='plugin'] [data-dropdown-sdks='plugin'] {
 
 body[data-sdk-menu='web'] [data-dropdown-sdks-menu='web'],
 body[data-sdk-menu='mobile'] [data-dropdown-sdks-menu='mobile'],
+body[data-sdk-menu='game'] [data-dropdown-sdks-menu='game'],
 body[data-sdk-menu='plugin'] [data-dropdown-sdks-menu='plugin'] {
   @apply border-l-primary;
 }
